parser/src/parser/expressions/snapshots/tests__parser::expressions::if_expr::tests::parse_if_and_else.snap
---
created: "2020-05-06T10:43:12.318240300Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/if_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 31)
  FN_DEF@[0; 31)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 31)
      BLOCK@[10; 31)
        L_CURLY@[10; 11) "{"
        WHITESPACE@[11; 12) " "
        EXPR_STMT@[12; 30)
          IF_EXPR@[12; 30)
            IF_KW@[12; 14) "if"
            WHITESPACE@[14; 15) " "
            CONDITION@[15; 20)
              LITERAL@[15; 19)
                TRUE_KW@[15; 19) "true"
              WHITESPACE@[19; 20) " "
            BLOCK_EXPR@[20; 22)
              BLOCK@[20; 22)
                L_CURLY@[20; 21) "{"
                R_CURLY@[21; 22) "}"
            WHITESPACE@[22; 23) " "
            ELSE_KW@[23; 27) "else"
            WHITESPACE@[27; 28) " "
            BLOCK_EXPR@[28; 30)
              BLOCK@[28; 30)
                L_CURLY@[28; 29) "{"
                R_CURLY@[29; 30) "}"
        R_CURLY@[30; 31) "}"

