parser/src/parser/expressions/snapshots/tests__parser::expressions::index_expr::tests::parse_nested_index_expr.snap
---
created: "2020-05-06T10:43:12.384964Z"
creator: insta@0.8.2
source: parser/src/parser/expressions/index_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 20)
  FN_DEF@[0; 20)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 20)
      BLOCK@[10; 20)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 18)
          INDEX_EXPR@[11; 18)
            INDEX_EXPR@[11; 15)
              IDENT_EXPR@[11; 12)
                NAME@[11; 12)
                  IDENT@[11; 12) "a"
              L_BRACK@[12; 13) "["
              LITERAL@[13; 14)
                INT_NUMBER@[13; 14) "0"
              R_BRACK@[14; 15) "]"
            L_BRACK@[15; 16) "["
            LITERAL@[16; 17)
              INT_NUMBER@[16; 17) "1"
            R_BRACK@[17; 18) "]"
        SEMI@[18; 19) ";"
        R_CURLY@[19; 20) "}"

